fix header and main spacing

--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,22 @@
 }
 
 header {
-    display: flex;
-    justify-content: space-around;
+    width: 100%;
     background-color: #ff6900;
+}
+
+.headercontainer {
+    max-width: 960px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
     color: white;
     padding: 20px 0;
 }
 
 .navig {
     display: flex;
-    justify-content: flex-start;
-    max-width: 1000px;
-    margin: auto;
+    justify-content: center;
     gap: 10px;
 }
 
@@ -26,19 +30,20 @@ header {
 }
 
 .logo {
-    height: 20px;
+    height: 25px;
     width: auto;
 }
 
 .products {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 15px;
     padding: 40px 0;
-    max-width: 1000px;
+    max-width: 960px;
     margin: auto;
 }
 
 .photo {
-    height: 400px;
+    height: 450px;
     width: auto;
 }
